--- a/app/src/main/res/layout/fragment_register.xml
+++ b/app/src/main/res/layout/fragment_register.xml
@@ -105,7 +105,7 @@
                 style="@style/Theme.EditText"
                 android:inputType="number"
                 android:hint="@string/input_telefone_RegisterFragment"
-                android:drawableStart="@drawable/ic_phone" />
+                android:drawableStart="@drawable/ic_phone_line" />
 
             <TextView
                 android:layout_width="match_parent"
