--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/white"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".presenter.profile.ProfileFragment">
 
     <LinearLayout
@@ -24,19 +24,18 @@
             <androidx.appcompat.widget.Toolbar
                 android:id="@+id/toolbar"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content" >
+                android:layout_height="wrap_content">
 
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center_horizontal"
-                    android:textColor="@color/color_default"
-                    android:text="@string/txt_nome_profileFragment"/>
+                    android:text="@string/txt_nome_profileFragment"
+                    android:textColor="@color/color_default" />
 
             </androidx.appcompat.widget.Toolbar>
 
         </com.google.android.material.appbar.AppBarLayout>
-
 
 
         <LinearLayout
@@ -49,8 +48,8 @@
                 android:id="@+id/materialCardView"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                app:cardCornerRadius="50dp"
                 android:layout_gravity="center"
+                app:cardCornerRadius="50dp"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent">
 
@@ -68,76 +67,74 @@
                 android:id="@+id/textInputLayout"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="@string/txt_nome_profileFragment"
                 android:layout_marginTop="32dp"
+                android:text="@string/txt_nome_profileFragment"
                 android:textColor="@color/color_default"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/textView"/>
+                app:layout_constraintTop_toBottomOf="@+id/textView" />
 
             <EditText
                 android:id="@+id/edit_name"
+                style="@style/Theme.EditText"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                style="@style/Theme.EditText"
                 android:layout_marginTop="4dp"
-                tools:hint="@string/input_nome_profileFragment"
                 android:drawableStart="@drawable/ic_user"
-                android:drawableTint="@color/color_default" />
+                android:drawableTint="@color/color_default"
+                tools:hint="@string/input_nome_profileFragment" />
 
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="@string/txt_email_profileFragment"
                 android:layout_marginTop="16dp"
+                android:text="@string/txt_email_profileFragment"
                 android:textColor="@color/color_default"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/textView"/>
+                app:layout_constraintTop_toBottomOf="@+id/textView" />
 
             <EditText
                 android:id="@+id/edit_email"
+                style="@style/Theme.EditText"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="4dp"
                 android:drawableStart="@drawable/ic_email"
                 android:enabled="false"
-                style="@style/Theme.EditText"
-                tools:hint="@string/input_email_profileFragment"
-                android:textColorHint="@color/color_hint" />
+                android:textColorHint="@color/color_hint_disable"
+                tools:hint="@string/input_email_profileFragment" />
 
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="@string/txt_telefone_profileFragment"
                 android:layout_marginTop="16dp"
+                android:text="@string/txt_telefone_profileFragment"
                 android:textColor="@color/color_default"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/textView"/>
+                app:layout_constraintTop_toBottomOf="@+id/textView" />
 
             <com.vicmikhailau.maskededittext.MaskedEditText
                 android:id="@+id/edit_phone"
+                style="@style/Theme.EditText"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:background="@drawable/bg_edit_around"
                 android:layout_marginTop="4dp"
-                app:mask="(##) #####-####"
-                style="@style/Theme.EditText"
+                android:background="@drawable/bg_edit_around"
+                android:drawableStart="@drawable/ic_phone_line"
                 android:inputType="number"
-                tools:hint="@string/input_telefone_profileFragment"
-                android:drawableStart="@drawable/ic_phone_line" />
-
-
+                app:mask="(##) #####-####"
+                tools:hint="@string/input_telefone_profileFragment" />
 
 
             <com.google.android.material.button.MaterialButton
                 android:id="@+id/btn_register"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_marginTop="24dp"
                 android:background="@drawable/bg_btn"
                 android:text="@string/btn_atualizarperfil_profileFragment"
-                android:layout_marginTop="24dp"
                 app:backgroundTint="@color/color_default"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
@@ -145,17 +142,17 @@
 
             <ProgressBar
                 android:id="@+id/progressBar"
-                android:visibility="invisible"
-                tools:visibility="visible"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:indeterminateTint="@color/color_default"
-                app:layout_constraintEnd_toEndOf="parent"
                 android:layout_gravity="center_horizontal"
+                android:layout_marginTop="16dp"
+                android:indeterminateTint="@color/color_default"
+                android:visibility="invisible"
+                app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.5"
                 app:layout_constraintStart_toStartOf="parent"
-                android:layout_marginTop="16dp"
-                app:layout_constraintTop_toBottomOf="@+id/btn_send_Link" />
+                app:layout_constraintTop_toBottomOf="@+id/btn_send_Link"
+                tools:visibility="visible" />
 
 
         </LinearLayout>
