--- a/app/src/main/res/navigation/nav_main.xml
+++ b/app/src/main/res/navigation/nav_main.xml
@@ -74,6 +74,12 @@
         <action
             android:id="@+id/action_homeFragment_to_profileFragment"
             app:destination="@id/profileFragment" />
+        <action
+            android:id="@+id/action_homeFragment_to_rechargeFormFragment"
+            app:destination="@id/rechargeFormFragment" />
+        <action
+            android:id="@+id/action_homeFragment_to_rechardReceiptFragment"
+            app:destination="@id/rechardReceiptFragment" />
     </fragment>
     <fragment
         android:id="@+id/depositFormFragment"
@@ -116,4 +122,20 @@
             android:id="@+id/action_profileFragment_to_homeFragment"
             app:destination="@id/homeFragment" />
     </fragment>
+    <fragment
+        android:id="@+id/rechargeFormFragment"
+        android:name="com.example.digitalbank.presenter.features.recharge.RechargeFormFragment"
+        android:label="fragment_recharge_form"
+        tools:layout="@layout/fragment_recharge_form" >
+        <action
+            android:id="@+id/action_rechargeFormFragment_to_rechardReceiptFragment"
+            app:destination="@id/rechardReceiptFragment"
+            app:popUpTo="@id/loginFragment"
+            app:popUpToInclusive="true"/>
+    </fragment>
+    <fragment
+        android:id="@+id/rechardReceiptFragment"
+        android:name="com.example.digitalbank.presenter.features.recharge.RechardReceiptFragment"
+        android:label="fragment_rechard_receipt"
+        tools:layout="@layout/fragment_rechard_receipt" />
 </navigation>
